--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "deploy": "webpack --config build/webpack.deploy.conf.js"
   },
   "dependencies": {
     "vue": "^2.3.3"
